--- a/style.css
+++ b/style.css
@@ -10,10 +10,11 @@ body{
 section{
     padding-top: 70px;
 }
-/*  */
-
+/*  FOR THE SACHIN SINGH */
 .footer-about, .footer-copyright {
     margin-top: 20px;
+     background-color: #ffffff ; /* light background for dark mode */
+    color: #1f1f1f; /* dark text color for dark mode */
 
 }
 
