--- a/style.css
+++ b/style.css
@@ -11,7 +11,9 @@ body {
 
 .custom-section {
     padding-top: 70px;
-    padding-left: 30px;
+    padding-left: 20px;
+    padding-right: 20px;
+    
 }
 
 /* SACHIN SINGH */
