--- a/style.css
+++ b/style.css
@@ -31,13 +31,13 @@ body {
     /* Center horizontally */
 }
 
-.footer {
+/* .footer {
     background-color: #e4e4eb;
     /* light background for dark mode */
-    color: #1f1f1f;
+/*     color: #1f1f1f; */
     /* dark text color for dark mode */
 }
-
+ */
 .footer-class,
 .footer-about,
 .footer-copyright {
