dark mode even after refresh

--- a/style.css
+++ b/style.css
@@ -130,6 +130,7 @@ form input.form-control {
 
 /* Additional dark mode styles for other elements as needed */
 /* Dark Mode Styles */
+/* Dark Mode Styles */
 body.dark-mode {
     background-color: #222227;
     /* Dark background color */
@@ -141,6 +142,17 @@ body.dark-mode {
     background-color: #1f1f1f;
     /* Dark navbar color */
 }
+
+.footer-about.dark-mode,
+.footer-copyright.dark-mode {
+    background-color: #474750 !important;
+    /* Dark background */
+    color: #ffffff !important;
+    /* Light text color */
+}
+
+/* You may need to add other dark mode styles for your elements */
+
 
 .nav-link.dark-mode {
     color: #ffffff;
